--- a/ASP_HW_2/Views/Home/Order.cshtml
+++ b/ASP_HW_2/Views/Home/Order.cshtml
@@ -1,4 +1,4 @@
-﻿@model ASP_HW_2.Models.Bicycle
+﻿@model ASP_HW_2.Models.Order
 
 <body class="bg-secondary">
     <div class="text-danger d-flex justify-content-center order-header" style="font-size:2rem">
@@ -7,70 +7,51 @@
     <div class="d-flex justify-content-around">
         <div class="w-50 bg-white border border-danger rounded d-flex flex-column justify-content-between">
             <form id="order" method="post" class="d-flex flex-column">
-                <input type="hidden" value="@Model.BicycleId" name="BicycleId" />
-                <div class="form-group d-flex justify-content-between p-3 mt-3">
-                    <label>User name:</label>
-                    <input type="text" name="UserName" class="w-75" />
+                <input type="hidden" value="@ViewBag.Bicycle.BicycleId" name="BicycleId" />
+                <div class="form-group d-flex justify-content-between flex-column p-3 mt-3">
+
+                    <div class="d-flex justify-content-between inputs-container">
+                        @Html.LabelFor(x => x.UserName)
+                        @Html.TextBoxFor(x => x.UserName, new { @class = "w-75" })
+
+                    </div>
+                        @Html.ValidationMessageFor(x => x.UserName)
+                   
                 </div>
-                <div class="form-group d-flex justify-content-between px-3">
-                    <label>Address:</label>
-                    <input type="text" name="Address" class="w-75" />
+                <div class="form-group d-flex justify-content-between flex-column px-3 w-100">
+
+                    <div class="d-flex justify-content-between inputs-container">
+                        @Html.LabelFor(x => x.Address)
+                        @Html.TextBoxFor(x => x.Address, new { @class = "w-75" })
+                    </div>
+                        @Html.ValidationMessageFor(x => x.Address)
+                  
                 </div>
-                <div class="form-group d-flex justify-content-between px-3">
-                    <label>Contact phone:</label>
-                    <input type="text" name="ContactPhone" class="w-75" />
+                <div class="form-group d-flex justify-content-between flex-column px-3">
+
+                    <div class="d-flex justify-content-between inputs-container">
+                        @Html.LabelFor(x => x.ContactPhone)
+                        @Html.TextBoxFor(x => x.ContactPhone, new { @class = "w-75" })
+                    </div>
+                        @Html.ValidationMessageFor(x => x.ContactPhone)
+                       
                 </div>
-            </form>
+</form>
         </div>
         <div class="w-25 bg-white p-4 border border-danger rounded">
-            <img class="w-100 " src="@Model.ImageUrl" />
+            <img class="w-100 " src="@ViewBag.Bicycle.ImageUrl" />
             <div class="d-flex mt-2 justify-content-between">
                 <div>Model:</div>
-                <div>@Model.Model</div>
+                <div>@ViewBag.Bicycle.Model</div>
             </div>
             <div class="d-flex justify-content-between">
                 <div>Price to pay:</div>
-                <div>@Model.Price $</div>
+                <div class="d-flex flex-nowrap">@ViewBag.Bicycle.Price $</div>
             </div>
         </div>
     </div>
     <div class="w-100 d-flex justify-content-center mt-3">
         <button form="order" id="btnSubmit" type="submit" class="w-50 btn btn-light">Confirm</button>
-        <script>
-            let btn = document.getElementById("btnSubmit");
-
-            btn.addEventListener("click", function (e) {
-
-                e.preventDefault();
-
-                let form = document.getElementById("order");
-                let inputs = form.querySelectorAll("input");
-             
-
-                let check = true;
-                for (let i = 0; i < inputs.length; i++) {
-
-                    inputs[i].addEventListener("change", function () {
-                        if (inputs[i].style.border === "1px solid red") {
-                            inputs[i].style.border = "1px solid black";
-                        }
-                    });
-
-                    if (!inputs[i].value) {
-                        inputs[i].style.border = "1px solid red";
-                        check = false;
-
-                    }
-                }
-
-                if (check) {
-                    form.submit();
-                }
-                else {
-                    alert("Unccorect input");
-                }
-            })
-        </script>
     </div>
 </body>
 
