--- a/ASP_HW_2/Views/Shared/_Layout.cshtml
+++ b/ASP_HW_2/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <img class="home-image border rounded" src="https://mudsweatandgears.ca/wp-content/uploads/2021/01/Hardtail1c.jpg"/>
+                <img class="home-image border rounded" src="https://mudsweatandgears.ca/wp-content/uploads/2021/01/Hardtail1c.jpg" />
                 <div class="navbar-brand text-danger">Bicycle shop</div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -21,10 +21,72 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light" href="~/Home/Index" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
+                            </li>
+                        }
+                        @if (User.IsInRole("SuperAdmin"))
+                        {
+                            <li>
+                                <a class="nav-link text-light" asp-controller="Admin" asp-action="EditUserRole">Users</a>
+                            </li>
+                        }
+
+                    <li class="menu-buttons">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a class="btn btn-secondary ml-auto d-flex align-items-center" asp-controller="Account" asp-action="Logout">Logout</a>
+                            <div class="text-danger p-2 mr-1 ">
+                                <div>Hello,</div>
+                                <div>@User.Identity.Name</div>
+                            </div>
+                        }
+                        else
+                        {
+                            <a class="btn btn-secondary" asp-controller="Account" asp-action="Login">Login</a>
+                            <a class="btn btn-secondary" asp-controller="Account" asp-action="Register">Register</a>
+                        }
+                    </li>
+
+                        <li class="nav-item cart-small">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Admin" asp-action="Index">Cart</a>
+                        </li>
+
                     </ul>
                 </div>
+
+                <div class="login-buttons">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                    <div class="d-flex align-items-center">
+                        <a class="btn btn-secondary  ml-auto" asp-controller="Account" asp-action="Logout">Logout</a>
+                        <div class="text-danger p-2 mr-1 ">
+                            <div>Hello,</div>
+                            <div>@User.Identity.Name</div>
+                        </div>
+                    </div>
+                    }
+                    else
+                    {
+                        <a class="btn btn-secondary  ml-auto mr-1" asp-controller="Account" asp-action="Login">Login</a>
+                        <a class="btn btn-secondary" asp-controller="Account" asp-action="Register">Register</a>
+                    }
+                </div>
+
+                @{
+                    var parms = new Dictionary<string, string>
+                            {
+                        {"returnUrl", "/" }
+                    };
+                }
+
+                <a class="nav-link text-light home-image" asp-area="" asp-controller="Cart" asp-action="Index" asp-all-route-data="parms">
+                    <img class="home-image border rounded" src="~/cartIcon.jpg" />
+                </a>
             </div>
         </nav>
     </header>
