--- a/ASP_HW_2/Views/Home/Index.cshtml
+++ b/ASP_HW_2/Views/Home/Index.cshtml
@@ -1,110 +1,93 @@
-﻿@model IEnumerable<ASP_HW_2.Models.Bicycle>
+﻿@model ASP_HW_2.Models.ViewModels.IndexHomeViewModel
 
 <body class="bg-secondary">
+    <div class="d-flex justify-content-around">
+        <div class="mb-3">
+            <div class="dropdown">
+                <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuSort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Sort options
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuSort">
+                    <button value="PopularityAsc" class="nav-link text-dark dropdown-item sort-item">Popularity Asc</button>
+                    <button value="ModelAsc" class="nav-link text-dark dropdown-item sort-item">Model Asc </button>
+                    <button value="PriceAsc" class="nav-link text-dark dropdown-item sort-item">Price Asc</button>
+                    <button value="CompanyAsc" class="nav-link text-dark dropdown-item sort-item">Company Asc </button>
+                    <button value="YearAsc" class="nav-link text-dark dropdown-item sort-item">Year Asc</button>
+                    <button value="CountryAsc" class="nav-link text-dark dropdown-item sort-item">Country Asc </button>
+                </div>
+            </div>
+        </div>
 
-    <div class="mb-3">
         <div class="dropdown">
             <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuSort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Sort options
+                Serch options
             </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuSort">
-                <a asp-action="Index" asp-route-sortType="PopularityAsc" class="nav-link text-dark dropdown-item">Popularity Asc</a>
-                <a asp-action="Index" asp-route-sortType="ModelAsc" class="nav-link text-dark dropdown-item">Model Asc </a>
-                <a asp-action="Index" asp-route-sortType="PriceAsc" class="nav-link text-dark dropdown-item">Price Asc</a>
-                <a asp-action="Index" asp-route-sortType="CompanyAsc" class="nav-link text-dark dropdown-item">Company Asc </a>
-                <a asp-action="Index" asp-route-sortType="YearAsc" class="nav-link text-dark dropdown-item">Year Asc</a>
-                <a asp-action="Index" asp-route-sortType="CountryAsc" class="nav-link text-dark dropdown-item">Country Asc </a>
-            </div>
+            <form class="dropdown-menu p-4" id="search">
+                <label for="selectSearchParam">Search by:</label>
+                <select name="searchParam" class="form-control" id="selectSearchParam">
+                    <option>Model</option>
+                    <option>Price</option>
+                    <option>Company</option>
+                    <option>Year</option>
+                    <option>Country</option>
+                </select>
+                <div class="d-flex justify-content-center flex-column">
+                    <input type="text" name="searchValue" class="w-100 my-2" />
+                    <button type="submit" form="search" id="search-button" class="btn btn-primary">Search</button>
+                </div>
+            </form>
         </div>
-    </div>
 
-    @foreach (var bicycle in Model)
-    {
-        <div class="d-flex border border-danger rounded mb-2 p-3 align-items-center bg-white bicycle-container">
-            <div class="w-50 bicycle-small">
-                <img class="w-100 p-4" src="@bicycle.ImageUrl" />
-            </div>
-            <div class="w-50 d-flex flex-column align-items-center bicycle-small">
-                <div class="bg-dark text-light w-100 text-center rounded border mb-2">Info</div>
-                <div class="d-flex justify-content-between w-75">
-                    <div>Popularity:</div>
-                    <div class="d-flex justify-content-end">
-                        @if (bicycle.Popularity == ASP_HW_2.Models.Popularity.one)
-                        {
-                            <img class="popularity-star" src="https://clipart-best.com/img/star/star-clip-art-38.png" />
-                        }
-                        @if (bicycle.Popularity == ASP_HW_2.Models.Popularity.two)
-                        {
-                            @for (int i = 0; i < 2; i++)
-                            {
-                                <img class="popularity-star" src="https://clipart-best.com/img/star/star-clip-art-38.png" />
-                            }
-                        }
-                        @if (bicycle.Popularity == ASP_HW_2.Models.Popularity.three)
-                        {
-                            @for (int i = 0; i < 3; i++)
-                            {
-                                <img class="popularity-star" src="https://clipart-best.com/img/star/star-clip-art-38.png" />
-                            }
-                        }
-                        @if (bicycle.Popularity == ASP_HW_2.Models.Popularity.four)
-                        {
-                            @for (int i = 0; i < 4; i++)
-                            {
-                                <img class="popularity-star" src="https://clipart-best.com/img/star/star-clip-art-38.png" />
-                            }
-                        }
-                        @if (bicycle.Popularity == ASP_HW_2.Models.Popularity.five)
-                        {
-                            @for (int i = 0; i < 5; i++)
-                            {
-                                <img class="popularity-star" src="https://clipart-best.com/img/star/star-clip-art-38.png" />
-                            }
-                        }
-
-                    </div>
+        <div class="dropdown">
+            <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuSort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Filter options
+            </button>
+            <form class="dropdown-menu p-4" id="filter">
+                <div class="form-check d-flex justify-content-between">
+                    <input type="checkbox" value="popularity" class="nav-link text-dark form-check-input" id="popularity" />
+                    <label for="popularity" class="text-dark pr-1">Popularity</label>
+                    <select name="popularity" class="input-checkbox" asp-items="Model.Popularity"></select>
                 </div>
-                <div class="d-flex justify-content-between w-75">
-                    <div>Model:</div>
-                    <div>@bicycle.Model</div>
+                <div class="form-check d-flex justify-content-between">
+                    <input type="checkbox" value="model" class="nav-link text-dark form-check-input " id="model" />
+                    <label for="models" class="text-dark pr-1">Model</label>
+                    <select name="model" class="input-checkbox" asp-items="Model.Models"></select>
                 </div>
-                <div class="d-flex justify-content-between w-75">
-                    <div>Price:</div>
-                    <div>@bicycle.Price $</div>
+                <div class="form-check d-flex justify-content-between">
+                    <input type="checkbox" value="price" class="nav-link text-dark form-check-input" id="price" />
+                    <label for="price" class="text-dark pr-1">Price</label>
+                    <select name="price" class="input-checkbox" asp-items="Model.Prices"></select>
                 </div>
-                <div class="bg-dark text-light w-100 text-center rounded border my-2">Details</div>
-                <div class="d-flex justify-content-between w-75">
-                    <div>Company:</div>
-                    <div>@bicycle.Company</div>
+                <div class="form-check d-flex justify-content-between">
+                    <input type="checkbox" value="company" class="nav-link text-dark form-check-input" id="company" />
+                    <label for="company" class="text-dark pr-1">Company</label>
+                    <select name="company"  class="input-checkbox" asp-items="Model.Companies"></select>
                 </div>
-                <div class="d-flex justify-content-between w-75">
-                    <div>Year:</div>
-                    <div>@bicycle.Year</div>
+                <div class="form-check d-flex justify-content-between">
+                    <input type="checkbox" value="year" class="nav-link text-dark form-check-input" id="year" />
+                    <label for="year" class="text-dark pr-1">Year</label>
+                    <select name="year"  class="input-checkbox" asp-items="Model.Years"></select>
                 </div>
-                <div class="d-flex justify-content-between w-75 pb-2">
-                    <div>Country:</div>
-                    <div>@bicycle.Country</div>
+                <div class="form-check d-flex justify-content-between mb-2">
+                    <input type="checkbox" value="country" class="nav-link text-dark form-check-input" id="country" />
+                    <label for="country" class="text-dark pr-1">Country</label>
+                    <select name="country"  class="input-checkbox" asp-items="Model.Countries"></select>
                 </div>
-
-                <a href="~/Home/Order/@bicycle.BicycleId" class="btn btn-secondary w-100">Order</a>
-
-                    @using (Html.BeginForm("AddToCart", "Cart", new { bicycleId = bicycle.BicycleId, returnUrl = Context.Request.Path }, FormMethod.Post,null, new { @class = "w-100" }))
-                    {
-                        <input type = "submit" value="+ Add to cart" class="btn btn-secondary w-100 mt-1" />
-                    }
-
-            </div>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" form="filter" id="filter-button" class="btn btn-primary">Filter</button>
+                </div>
+            </form>
         </div>
-    }
 
-    <div class="d-flex justify-content-around">
-    @Html.ActionLink("Back", "Index", new { page = ViewBag.page - 1 }, new {@class = "btn btn-light text-dark"})
-    @if (!ViewBag.IsFinished)
-    {
-        @Html.ActionLink("Next", "Index", new { page = ViewBag.page + 1 }, new {@class = "btn btn-light text-dark"})
-    }
+        <div>
+            <button id="reset" class="btn btn-light">Reset all</button>
+        </div>
 
     </div>
+    <div id="bicyclesList">
+
+    </div>
+
 </body>
 
 
